Fix weird spacing issue

--- a/cuauradio/css/osd.css
+++ b/cuauradio/css/osd.css
@@ -75,7 +75,7 @@ div.bug {
 
 div#RTC {
     height: 100%;
-    width: 24.5vh;
+    width: fit-content;
     color: white;
     border-radius: 2vh;
     background-color: rgba(0, 0, 0, 0.6);
@@ -85,7 +85,7 @@ div#RTC {
     align-items: center;
     justify-content: center;
     font-size: 5.5vh;
-    padding-top: 0.7vh;
+    padding: 0.7vh 2.5vh 0 2.5vh;
     margin-right: 0.2vmax;
 }
 .shadow {
